# TradeForge

./: .gitignore  CMakeLists.txt  README.md  TradeForge.sln  main.cpp
Resources/: resources.qrc
RoboforexAPI/: RoboforexAPI.csproj
RoboforexAPI/Extensions/: FormDataExtensions.cs  RoboforexStringExtensions.cs
RoboforexAPI/Models/Entities/: Account.cs  AccountCashState.cs  AccountMarginState.cs  AccountState.cs  Deal.cs  Insrument.cs  InsrumentShort.cs  Instrument.cs  InstrumentShort.cs  Order.cs  OrderId.cs  QuoteData.cs
RoboforexAPI/Models/Enums/: AccountStatus.cs  AccountTradeSystem.cs  AccountType.cs  DealStatus.cs  OrderSide.cs  OrderStatus.cs  OrderType.cs  TradeMode.cs
RoboforexAPI/Models/Interfaces/: IBrokerAPI.cs
RoboforexAPI/Models/Requests/: AccountTickerRequest.cs  BaseAccountRequest.cs
RoboforexAPI/Models/Requests/Accounts/: DealsRequest.cs  OrdersRequest.cs
RoboforexAPI/Models/Requests/Trading/: CancelOrderRequest.cs  CloseDealRequest.cs  ModifyDealRequest.cs  ModifyOrderRequest.cs  PlaceOrderRequest.cs  TradingIdRequest.cs
RoboforexAPI/Models/Responses/: BaseResponse.cs
RoboforexAPI/Models/Responses/Accounts/: AccountOrdersResponse.cs  AccountStateResponse.cs  AccountsResponse.cs  DealsResponse.cs  OrdersResponse.cs
RoboforexAPI/Models/Responses/Instruments/: InstrumentDescriptionResponse.cs  InstrumentsResponse.cs  QuoteDataResponse.cs
RoboforexAPI/Models/Responses/Trading/: OrderIdResponse.cs
RoboforexAPI/Services/: RoboforexService.cs
RoboforexConsoleExample/: Program.cs  RoboforexConsoleExample.csproj
StrategyAnalyzer/: StrategyAnalyzer.csproj
StrategyAnalyzer/Models/Entities/: AnalyzerConfig.cs  EquityData.cs  MainStrategyStats.cs  MinorStrategyStats.cs  MonthlyStrategyPerfomance.cs  TradeStats.cs
StrategyAnalyzer/Models/Interfaces/: IHistoryDataConverter.cs  IStrategyAnalyzer.cs
StrategyAnalyzer/Services/: AnalyzerService.cs
StrategyAnalyzerConsoleExample/: Program.cs  QuantXConverter.cs  QuantXDeal.cs  QuantXDealMap.cs  StrategyAnalyzerConsoleExample.csproj
Utils/: YahooDownloader.py
Widgets/: mainwindow.cpp  mainwindow.h
Widgets/CandleCharts/: candleChartView.cpp  candleChartView.h
Widgets/CustomMessageBoxes/: messageBoxFactory.cpp  messageBoxFactory.h
Widgets/CustomMessageBoxes/Windows/AcceptMessageBox/: customacceptmessagebox.cpp  customacceptmessagebox.h  customacceptmessagebox.ui
Widgets/CustomMessageBoxes/Windows/InfoMessageBox/: custominfomessagebox.cpp  custominfomessagebox.h  custominfomessagebox.ui
Widgets/CustomMessageBoxes/Windows/ProgressMessageBox/: customprogressmessagebox.cpp  customprogressmessagebox.h  customprogressmessagebox.ui
Widgets/HistoricalWindow/: historicalwindow.cpp  historicalwindow.h  historicalwindow.ui
Widgets/HistoricalWindow/Components/: customStyledItemDelegate.cpp  customStyledItemDelegate.h  tableSymbolsStyledDelegate.cpp  tableSymbolsStyledDelegate.h
Widgets/HistoricalWindow/CustomMessageBox/: custommessagebox.cpp  custommessagebox.h
Widgets/HistoricalWindow/CustomTable/: historicatlWindowTable.cpp  historicatlWindowTable.h
Widgets/HistoricalWindow/Data/: SymbolStructs.cuh  e_HistoricalWindowItemData.h
Widgets/HistoricalWindow/DownloadCSVWindow/: downloadcsvwindow.cpp  downloadcsvwindow.h  downloadcsvwindow.ui
Widgets/HistoricalWindow/ImportFilesDialog/: filetoimport.cpp  filetoimport.h  filetoimport.ui  importfileswindow.cpp  importfileswindow.h  importfileswindow.ui
Widgets/Subsystems/: historicalDataManager.cpp  historicalDataManager.h  symboldata.cpp  symboldata.h
Widgets/Terminal/: messageHandler.h  terminal.cpp  terminal.h  terminal.ui
Widgets/TitleBar/: customTitleBar.cpp  customTitleBar.h
